--- a/README
+++ b/README
@@ -1,24 +1,30 @@
 
-            {
-         }   }   {
-        {   {  }  }
-         }   }{  {
-        {  }{  }  }                    _____       __  __
-       ( }{ }{  { )                   / ____|     / _|/ _|
-     .- { { }  { }} -.               | |     ___ | |_| |_ ___  ___
-    (  ( } { } { } }  )              | |    / _ \|  _|  _/ _ \/ _ \
-    |`-..________ ..-'|              | |___| (_) | | | ||  __/  __/
-    |                 |               \_____\___/|_| |_| \___|\___|
-    |                 ;--.
-    |                (__  \            _____           _       _
-    |                 | )  )          / ____|         (_)     | |
-    |                 |/  /          | (___   ___ _ __ _ _ __ | |_
-    |                 (  /            \___ \ / __| '__| | '_ \| __|
-    |                 |/              ____) | (__| |  | | |_) | |_
-    |                 |              |_____/ \___|_|  |_| .__/ \__|
-     `-.._________..-'                                  | |
-                                                        |_|
+	    {			 _||          |  _)
+	 }   }   {	  _|-_)  _||  -_)  _|  _| |\ \ / -_)
+	{   {  }  }	_|\___|_| _|\___|\__|\__|_| \_/\___|
+	 }   }{  {
+	{  }{  }  }                    _____       __  __
+       ( }{ }{  { )                   / ____|.... / _|/ _|
+     .- { { }  { }} -.              .| |     ___ | |_| |_ ___  ___
+    (  ( } { } { } }  )            ( | |    / _ \|  _|  _/ _ \/ _ \
+    |`-.._________..-'|            |'| |___| (_) | | | ||  __/  __/
+    |                 |            |  \_____\___/|_| |_| \___|\___|
+    |                 ;--.	.--:		     :
+    |                (__  \    /  __)  _____         : _       _
+    |                 | )  )  (  ( |  / ____|        :(_)     | |
+    |                 |/  /    \  \| | (___   ___ _ __ _ _ __ | |_
+    |                 /  /      \  \  \___ \ / __| '__| | '_ \| __|
+    |                (_/          \_) ____) | (__| | :| | |_) | |_
+    |                 |            | |_____/ \___|_| :|_| .__/ \__|
+     `-.._________..-'              `-.._________..-'   | |
+							|_|
 
+
+  This experimental fork adds reflective features to Coffeescript
+
+  The usual Coffeescript README follows:
+
+  ----
 
   CoffeeScript is a little language that compiles into JavaScript.
 
