--- a/README
+++ b/README
@@ -22,9 +22,44 @@
 
   This experimental fork adds reflective features to Coffeescript
 
-  The usual Coffeescript README follows:
+  Reflective CoffeeScript aims to be fully compatible with the
+  upstream, vanilla CoffeeScript.
 
-  ----
+  Features:
+
+  * Pure methods
+  
+  The syntax @> is added to create pure methods that can only access
+  'this' and arguments (no global variables or outer lexically scoped
+  variables).
+
+  Attempting to access a global variable or a lexical variable defined
+  in an outer scope will result in a compiler error.
+
+     x = 1
+     @> x   # Compiler error
+
+  This makes the function easily reusable in different contexts, and,
+  when used consistently, makes it easier to create objects without
+  hidden state.
+
+  As an automatic bonus feature, the 'do @>' syntax can be used to
+  fully isolate the lexical scope of a block of code.
+
+    x = 1 		        x = 1
+    do -> x = 2  	        do @> x = 2
+    console.log x # prints 2    console.log x # prints 1
+
+    x = 1                       x = 1
+    do @> 			do (x) @>
+      x = x * 3 		  x = x * 3
+      #   ^-- compiler error      console.log x  # prints 3
+                                console.log x    # prints 1
+  
+  Additional ideas are included in ROADMAP.org
+
+  CoffeeScript's README follows:
+  --------------------------------------------------------------------
 
   CoffeeScript is a little language that compiles into JavaScript.
 
